Added cross-server macros. Only works from MM and Lat rn